# TS_camera_BSP_test

./: CMakeLists.txt  CPU_MEM_TEST_zh_CN.ts  README.md  Utils.cpp  utils.h  widget.cpp
build-cpu_mem_test-Desktop_Qt_5_12_9_GCC_64bit-Debug/: cpuAndMemData.txt  cpu_mem_test
build-cpu_mem_test-Desktop_Qt_5_12_9_GCC_64bit-Debug/data/: cpuAndMemData.txt
build-cpu_mem_test-Desktop_Qt_5_14_2_GCC_64bit-Debug/: cpu_mem_test
build-cpu_mem_test-Desktop_Qt_5_14_2_GCC_64bit-Debug/data/: cpuAndMemData.txt
cpu_mem_test/: CPUInfo.cpp  CPUInfo.h  MEMinfo.h  Utils.h  cpu_mem_test.pro  datalog.cpp  datalog.h  widget.cpp  widget.h  widget.ui
